## BASIC diagnostics: use committed generated sources (no Python generation)

add_library(fe_basic STATIC)

target_sources(fe_basic PRIVATE
        diag/BasicDiag.cpp
        Options.cpp
        Token.cpp
        Lexer.cpp
        AST.cpp
        AstPrinter.cpp
        AstPrint_Expr.cpp
        AstPrint_Stmt.cpp
        print/Print_Stmt_Control.cpp
        print/Print_Stmt_Jump.cpp
        print/Print_Stmt_Decl.cpp
        print/Print_Stmt_IO.cpp
        AstWalkerUtils.cpp
        Parser.cpp
        Parser_Stmt.cpp
        Parser_Stmt_Core.cpp
        Parser_Stmt_Control.cpp
        Parser_Stmt_If.cpp
        Parser_Stmt_Select.cpp
        Parser_Stmt_Loop.cpp
        Parser_Stmt_Jump.cpp
        Parser_Stmt_IO.cpp
        Parser_Stmt_OOP.cpp
        Parser_Stmt_Runtime.cpp
        Parser_Expr.cpp
        Parser_Token.cpp
        StatementSequencer.cpp
        TypeSuffix.cpp
        TypeRules.cpp
        ILTypeUtils.cpp
        IoStatementLowerer.cpp
        ControlStatementLowerer.cpp
        RuntimeStatementLowerer.cpp
        RuntimeStatementLowerer_Assign.cpp
        RuntimeStatementLowerer_Decl.cpp
        RuntimeStatementLowerer_Terminal.cpp
        LoweringContext.cpp
        LocationScope.cpp
        Lowerer_Program.cpp
        Lowerer_Procedure.cpp
        Lowerer_Procedure_Context.cpp
        Lowerer_Procedure_Signatures.cpp
        Lowerer_Procedure_Variables.cpp
        Lowerer_Procedure_Skeleton.cpp
        Lowerer_Procedure_Emit.cpp
        Lowerer_Statement.cpp
        ProcedureSymbolTracker.cpp
        BasicSymbolQuery.cpp
        BuiltinRegistry.cpp
        builtins/MathBuiltins.cpp
        builtins/StringBuiltins.cpp
        Lowerer.cpp
        EmitCommon.cpp
        SelectCaseLowering.cpp
        SelectModel.cpp
        LowerExprLogical.cpp
        LowerExprNumeric.cpp
        LowerExprBuiltin.cpp
        LowerExpr.cpp
        LowerStmt_Control.cpp
        LowerStmt_IO.cpp
        LowerStmt_Runtime.cpp
        LowerRuntime.cpp
        RuntimeCallHelpers.cpp
        LowerScan.cpp
        lower/BuiltinCommon.cpp
        lower/builtins/Common.cpp
        lower/builtins/Math.cpp
        lower/builtins/String.cpp
        lower/builtins/Array.cpp
        lower/builtins/IO.cpp
        lower/common/CommonLowering.cpp
        lower/common/BuiltinUtils.cpp
        lower/Lowerer_Errors.cpp
        lower/Lowerer_Expr.cpp
        lower/Lower_Expr_NumericClassifier.cpp
        lower/Lowerer_Stmt.cpp
        lower/Scan_ExprTypes.cpp
        lower/Scan_RuntimeNeeds.cpp
        lower/oop/Lower_OOP_Scan.cpp
        LowerEmit.cpp
        lower/Emit_Control.cpp
        lower/Lower_If.cpp
        lower/Lower_Loops.cpp
        lower/Lower_Switch.cpp
        lower/Lower_TryCatch.cpp
        lower/Emitter.cpp
        lower/Emit_Expr.cpp
        lower/Emit_Builtin.cpp
        lower/Emit_OOP.cpp
        lower/oop/Lower_OOP_Emit.cpp
        SemanticAnalyzer.cpp
        SemanticAnalyzer_Procs.cpp
        SemanticAnalyzer_Stmts.cpp
        SemanticAnalyzer_Stmts_Shared.cpp
        SemanticAnalyzer_Stmts_Control.cpp
        SemanticAnalyzer_Namespace.cpp
        sem/Check_If.cpp
        sem/Check_Loops.cpp
        sem/Check_Jumps.cpp
        sem/Check_Select.cpp
        sem/Check_Expr_Unary.cpp
        sem/Check_Expr_Binary.cpp
        sem/Check_Expr_Call.cpp
        sem/Check_Expr_Var.cpp
        sem/Check_Expr_Array.cpp
        sem/NamespaceRegistry.cpp
        sem/TypeRegistry.cpp
        sem/RuntimePropertyIndex.cpp
        sem/RuntimeMethodIndex.cpp
        sem/UsingContext.cpp
        sem/TypeResolver.cpp
        sem/RegistryBuilder.cpp
        sem/OverloadResolution.cpp
        SemanticAnalyzer_Stmts_IO.cpp
        SemanticAnalyzer_Stmts_Runtime.cpp
        OopIndex.cpp
        OopLoweringContext.cpp
        Semantic_OOP.cpp
        Semantic_OOP_Helpers.cpp
        Semantic_OOP_Builder.cpp
        SemanticAnalyzer_Exprs.cpp
        SemanticAnalyzer_Builtins.cpp
        SymbolTable.cpp
        TypeCoercionEngine.cpp
        types/TypeMapping.cpp
        passes/CollectProcs.cpp
        constfold/Dispatch.cpp
        constfold/FoldArith.cpp
        constfold/FoldLogical.cpp
        constfold/FoldCompare.cpp
        constfold/FoldStrings.cpp
        constfold/FoldCasts.cpp
        constfold/FoldBuiltins.cpp
        ConstFolder.cpp
        Intrinsics.cpp
        Diag.cpp
        DiagnosticEmitter.cpp
        BasicCompiler.cpp
        lower/oop/Lower_OOP_Expr.cpp
        lower/oop/Lower_OOP_Stmt.cpp
        lower/oop/Lower_OOP_Alloc.cpp
        lower/oop/Lower_OOP_MemberAccess.cpp
        lower/oop/Lower_OOP_MethodCall.cpp
        lower/oop/Lower_OOP_Helpers.cpp
        lower/oop/Lower_OOP_RuntimeHelpers.cpp
        lower/oop/MethodDispatchHelpers.cpp
        lower/detail/ExprLoweringHelper.cpp
        lower/detail/ControlLoweringHelper.cpp
        lower/detail/OopLoweringHelper.cpp
        lower/detail/RuntimeLoweringHelper.cpp
        ProcRegistry.cpp
        SemanticDiagnostics.cpp
)

target_link_libraries(fe_basic PUBLIC viper_il_full il_build il_runtime fe_common)
target_include_directories(fe_basic PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../..>
        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/viper>
)
